--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Sunwind Skies
 header-img: img/home-bg.png
 email: mavericktesini@gmail.com
 copyright_name: Kiveo
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Adventure Together
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  Kiveo
