--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 # Site settings
-title: Sunwind Skies
+title: Maverick Tesini
 header-img: img/home-bg.png
+author: Maverick Tesini
 email: mavericktesini@gmail.com
-copyright_name: Kiveo
+copyright_name: Maverick Tesini
 description: > # this means to ignore newlines until "baseurl:"
-  Adventure Together
+  Code, Fly, Smile
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  Kiveo
