remove test post, alter banner msg

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Maverick Tesini
 email: mavericktesini@gmail.com
 copyright_name: Maverick Tesini
 description: > # this means to ignore newlines until "baseurl:"
-  Code, Fly, Smile
+  Coffee and Code On
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  Kiveo
